<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="trendingsRowModel" type="com.health_care.app.modules.article.data.model.TrendingsRowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearTrendingArticle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_7pxv"
        android:paddingEnd="@dimen/_6pxh"
        android:paddingStart="@dimen/_6pxh"
        android:paddingTop="@dimen/_7pxv" style="@style/groupStylecornerRadius_2">
        <FrameLayout android:id="@+id/frameArticleThumbnail"
            android:layout_height="@dimen/_87pxv" android:layout_width="@dimen/_138pxh">
            <ImageView android:id="@+id/imageCovidNineteen"
                android:layout_gravity="center"
                android:layout_height="@dimen/_87pxh"
                android:layout_width="@dimen/_138pxh"
                android:scaleType="fitXY" cornerRadius="@{@dimen/_8pxh}"
                imageRes="@{@drawable/img_rectangle_54}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle_54"/>
            <ImageView android:id="@+id/imageBookmark"
                android:layout_gravity="top|end"
                android:layout_height="@dimen/_15pxh"
                android:layout_width="@dimen/_15pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_bookmark"
                tools:ignore="ContentDescription" tools:src="@drawable/img_bookmark"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCovidNineteen"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{trendingsRowModel.txtCovidNineteen}"
            style="@style/txtIntermedium10_1" tools:text="@string/lbl_covid_19"/>
        <TextView android:id="@+id/txtDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@{trendingsRowModel.txtDescription}"
            style="@style/txtIntersemibold12" tools:text="@string/msg_comparing_the_astrazeneca"/>
        <LinearLayout android:id="@+id/linearEightySeven"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtDate"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{trendingsRowModel.txtDate}"
                style="@style/txtIntermedium8_2" tools:text="@string/lbl_jun_12_2021"/>
            <View
                android:background="@drawable/rectangle_bg_name_gray_500_radius_1"
                android:id="@+id/viewView"
                android:layout_height="@dimen/_2pxh" android:layout_width="@dimen/_2pxh"/>
            <TextView android:ellipsize="end" android:id="@+id/txtTime"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{trendingsRowModel.txtTime}"
                style="@style/txtIntermedium8" tools:text="@string/lbl_6_min_read"/>
        </LinearLayout>
    </LinearLayout>
</layout>
